[package]
name = "dlmm-fee-router"
version = "0.1.0"
description = "Permissionless Fee Routing for Meteora DLMM V2"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dlmm_fee_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.2"
bytemuck = "1.14"
